#88 javadoc